--- a/src/containers/Campaigns/CampaignsFilter/CampaignsFilter.scss
+++ b/src/containers/Campaigns/CampaignsFilter/CampaignsFilter.scss
@@ -3,9 +3,14 @@
   align-items: center;
   justify-content: space-between;
 
-  padding-bottom: 1rem;
+  position: sticky;
+  top: 0;
+
+  padding: 0.75rem;
   width: 100%;
-  border-bottom: 1px solid lightgray;
+  background: rgb(232, 232, 232);
+  border-radius: 1rem;
+  transition: 0.3s opacity ease;
 
   .searchbar {
     width: 300px;
