--- a/src/containers/Campaigns/CampaignsList/CampaignsList.scss
+++ b/src/containers/Campaigns/CampaignsList/CampaignsList.scss
@@ -1,15 +1,13 @@
 .campaigns-list {
   background: rgb(242, 242, 242);
-  padding: 2rem;
+  padding: 1rem 2rem;
+  overflow: auto;
 
   .list {
     display: flex;
     flex-direction: column;
     gap: 1rem;
 
-    height: 550px;
     margin-top: 1rem;
-
-    overflow-y: scroll;
   }
 }
